[workspace]
resolver = "2"
members = [ "container_image_name","launch"]

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html#lto
lto = true

# https://doc.rust-lang.org/cargo/reference/profiles.html#codegen-units
codegen-units = 1

# https://doc.rust-lang.org/cargo/reference/profiles.html#strip
strip = "debuginfo"

# https://doc.rust-lang.org/cargo/reference/profiles.html#opt-level
opt-level = "s"

[workspace.dependencies]
container-image-name = { path = "container_image_name" }
