[package]
name = "launch"
description = "A tool to help submit work to our cluster."
# Bumping version should automatically result in a new release.
# See .github/workflows/package_launch.yaml.
version = "0.1.4"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
comfy-table = "7.1.1"
constcat = "0.5.0"
env_logger = "0.11.3"
home = "0.5.9"
itertools = "0.13.0"
log = "0.4.21"
rand = "0.8.5"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
time = { version = "0.3.36", features = [
    "serde",
    "parsing",
    "formatting",
    "local-offset",
    "macros",
] }
time-local = "0.3.1"
whoami = { version = "1.5.1", default-features = false }
