[package]
name = "launch"
description = "A tool to help submit work to our cluster."
# Bumping version should automatically result in a new release.
# See .github/workflows/package_launch.yaml.
version = "0.1.9"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
comfy-table = { version = "7.1.1", features = ["custom_styling"] }
constcat = "0.5.0"
env_logger = "0.11.3"
home = "0.5.9"
log = "0.4.21"
rand = "0.8.5"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
time = { version = "0.3.36", features = [
    "serde",
    "parsing",
    "formatting",
    "local-offset",
    "macros",
] }
time-local = "0.4.1"
whoami = { version = "1.5.1", default-features = false }
kubernetes = { git = "https://github.com/Astera-org/kubernetes-client-rust.git", tag = "v1.31.0+1", version = "1.31.0" }
katib = { git = "https://github.com/Astera-org/katib-client-rust.git", tag = "v0.17.0+1", version = "0.17.0" }
serde_yaml = "0.9.34"
container-image-name = { workspace = true }
semver = "1.0.24"
ctrlc = "3.4.5"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "rustls-tls"] }
