#:schema https://json.schemastore.org/pyproject.json
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "katib_example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "draccus>=0.9.1",
    "tensorboard",
    "torch>=2.4.1",
]

[tool.setuptools]
packages = ["katib_example"]
