[project]
name = "ray-pixi"
version = "0.1.0"
requires-python = ">= 3.11"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.setuptools]
packages = ["ray_pixi"]
package-dir = { "" = "src" }

[tool.pixi.pypi-dependencies]
ray_pixi = { path = ".", editable = true }

[tool.pixi.dependencies]
mlflow-skinny = ">=2.14,<2.15"
ray-default = ">=2.31.0,<2.32"
